--- a/app/styles/mq-hd.css
+++ b/app/styles/mq-hd.css
@@ -27,7 +27,7 @@
     /*background-color: #222;*/
   }
   #ck-slide6 {
-    background-color: #555;
+    background-color: #eee;
   }
   #ck-slide7 {
     background-image:url(../images/caves_karsts/valdina_8r_web_hd.jpg);
@@ -96,7 +96,7 @@
     background-image: url(../images/springs/EAAaquarena20120702_8316_web_hd.jpg);
   }
   #springs-slide6 {
-    background-color: #555;
+    background-color: #eee;
   }
   #springs-slide7 {
     background-image: url(../images/springs/EAArice20120503_3620_web_hd.jpg);
