--- a/app/styles/mq-medium.css
+++ b/app/styles/mq-medium.css
@@ -28,7 +28,7 @@
     /*background-color: #222;*/
   }
   #ck-slide6 {
-    background-color: #555;
+    background-color: #eee;
   }
   #ck-slide7 {
     background-image:url(../images/caves_karsts/valdina_8r_web_md.jpg);
@@ -97,7 +97,7 @@
     background-image: url(../images/springs/EAAaquarena20120702_8316_web_md.jpg);
   }
   #springs-slide6 {
-    background-color: #555;
+    background-color: #eee;
   }
   #springs-slide7 {
     background-image: url(../images/springs/EAArice20120503_3620_web_md.jpg);
