--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -67,10 +67,11 @@
 
   <!-- Slide 6 -->
   <div data-parallax-background class="slide" id="ck-slide6" data-slide="6" data-parallax-ratio="0.5">
-    <span class="slideno"><h1>Recharge Data Interactive</h1></span>            
+    <span class="slideno"><h1 class="text-black">Recharge Data Interactive</h1></span>            
     <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <!-- <p alt="">A data interactive module based on annual recharge gauge data.</p> -->
+      <eaa-gauge-data-interactive-recharge></eaa-gauge-data-interactive-recharge>
+      <div class="chart-subtext">Note: Gaps in the individual data lines represent gaps in the collected gauge data for that year.</div>
     </div>  
   </div>
 
