--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -6,7 +6,7 @@
         <source src="../videos/720p/HCPSanMarcosRiver-loop3.webm" type="video/webm">
         <source src="../videos/720p/HCPSanMarcosRiver-loop3.mp4" type="video/mp4">
       </video>
-      <div class="map-backing"><eaa-aquifers-map></eaa-aquifers-map></div>
+      <!-- <div class="map-backing"><eaa-aquifers-map></eaa-aquifers-map></div> -->
     </div>
 	</div>
 </div>
