--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -77,7 +77,8 @@
     <span class="slideno"><h1>Spring Gauge Data Interactive</h1></span>         
     <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <!-- <p alt="">A data interactive module based on annual spring gauge data.</p> -->
+      <eaa-gauge-data-interactive-springs></eaa-gauge-data-interactive-springs>
+      <div class="chart-subtext">Note: Gaps in the individual data lines represent gaps in the collected gauge data for that year.</div>
     </div>
   </div>
 
