--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -95,7 +95,7 @@
 
   <!-- Slide 8 -->
   <div data-parallax-background class="slide" id="cons-slide8" data-slide="8" data-parallax-ratio="0.5">
-    <span class="slideno"><h1>Well Gauge Data Interactive</h1></span>               
+    <span class="slideno"><h1 class="text-black">Well Gauge Data Interactive</h1></span>               
     <a class="button-scroll" data-slide="9" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <eaa-gauge-data-interactive-wells></eaa-gauge-data-interactive-wells>
