--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -74,7 +74,7 @@
 
   <!-- Slide 6 -->
   <div data-parallax-background class="slide" id="springs-slide6" data-slide="6" data-parallax-ratio="0.5">
-    <span class="slideno"><h1>Spring Gauge Data Interactive</h1></span>         
+    <span class="slideno"><h1 class="text-black">Spring Gauge Data Interactive</h1></span>         
     <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <eaa-gauge-data-interactive-springs></eaa-gauge-data-interactive-springs>
