--- a/app/styles/interactives.css
+++ b/app/styles/interactives.css
@@ -1,9 +1,19 @@
 @charset "utf-8";
+.interactive {
+  margin: 0rem 0rem 0rem 0rem;
+}
+.viz {
+  /*width: 99%;*/
+  margin-left, margin-right: auto;
+  /*border: 1px solid #999;*/
+}
 /* Map */
 /* TBD */
 /* Gauge Data Line Chart */
 .chart {
-  font-size: .6rem;
+  font-size: .7rem;
+  /*border: 1px solid #999;*/
+  /*padding: 1em;*/
 }
 .axis path,
 .axis line {
@@ -12,6 +22,9 @@
   shape-rendering: crispEdges;
 }
 .x.axis path {
+  /*display: none;*/
+}
+.y.axis path {
   display: none;
 }
 .line {
@@ -20,9 +33,13 @@
 }
 .chart-subtext {
   margin-top: 1rem;
+  margin-left: 3rem;
   color: #000;
-  font-size: .6rem;
+  font-size: .65rem;
   font-style: italic;
+}
+.chart-legend {
+  border: 5px solid #555;
 }
 
 .subunit {
