--- a/app/styles/parallax.css
+++ b/app/styles/parallax.css
@@ -2,8 +2,8 @@
 /* slides */
 .slide {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 100%; /*100%;*/
+  height: 100%; /*100%;*/
   background-attachment: inherit;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
@@ -39,6 +39,22 @@
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;
+}
+.slide video.plxbgvideo {
+    margin-left: -4.2em;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    background-size: cover;
+    min-height: 100%;
+    min-width: 100%;
+    overflow: hidden;
+  }
+.wrapper {
+  width: auto;
+  height: 55rem; /*55rem;*/
+  position: relative;
+  margin: 0rem 0rem 0rem 3.2rem;
 }
 /* buttons */
 @-webkit-keyframes pulse_animation {
@@ -95,20 +111,5 @@
   /* IE8 */
   /*-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(SizingMethod='auto expand', M11=0.7071067811865476, M12=-0.7071067811865475, M21=0.7071067811865475, M22=0.7071067811865476)"; */
 }
-/* slide content */
-.slide video.plxbgvideo {
-    margin-left: -4.2em;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    background-size: cover;
-    min-height: 100%;
-    min-width: 100%;
-    overflow: hidden;
-  }
-.wrapper {
-  width: auto;
-  height: 55rem;
-  position: relative;
-  margin: 0rem 0rem 0rem 3.2rem;
-}
+
+
