--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -97,9 +97,9 @@
   <div data-parallax-background class="slide" id="cons-slide8" data-slide="8" data-parallax-ratio="0.5">
     <span class="slideno"><h1 class="text-black">Well Gauge Data Interactive</h1></span>               
     <a class="button-scroll" data-slide="9" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
+    <div class="wrapper interactive">
       <eaa-gauge-data-interactive-wells></eaa-gauge-data-interactive-wells>
-      <div class="chart-subtext">Note: Gaps in the individual data lines represent gaps in the collected gauge data for that year.</div>
+      <div class="chart-subtext">Note: Any gaps in the data lines represent gaps in the collected data for that time period.</div>
     </div>
   </div>
 
