--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -76,9 +76,9 @@
   <div data-parallax-background class="slide" id="springs-slide6" data-slide="6" data-parallax-ratio="0.5">
     <span class="slideno"><h1 class="text-black">Spring Gauge Data Interactive</h1></span>         
     <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
+    <div class="wrapper interactive">
       <eaa-gauge-data-interactive-springs></eaa-gauge-data-interactive-springs>
-      <div class="chart-subtext">Note: Gaps in the individual data lines represent gaps in the collected gauge data for that year.</div>
+      <div class="chart-subtext">Note: Any gaps in the data lines represent gaps in the collected data for that time period.</div>
     </div>
   </div>
 
