--- a/app/styles/interactives.css
+++ b/app/styles/interactives.css
@@ -3,35 +3,40 @@
   margin: 0rem 0rem 0rem 0rem;
 }
 .viz {
-  /*width: 99%;*/
   margin-left, margin-right: auto;
-  /*border: 1px solid #999;*/
 }
 /* Data Display */
 .data-display {
   z-index: 100;
   position: absolute;
   top: 2rem;
-  left: 3rem;
-  color: #000;
+  left: 1rem;
 }
 .year-display {
   font-size: 10em;
   color: rgba(0,0,0,0.9);
 }
+.data-value {
+  font-weight: 900;
+}
 .legend {
   z-index: 200;
   position: absolute;
-  /*display: block;*/
   cursor: default;
   left:1rem;
   top: 12rem;
   margin-top: 1rem;
   line-height: 1rem;
-  font-size: 1.2rem;
-  /*color: #000;*/
+  font-size: 1rem;
+  background-color: rgba(230, 211, 149, 0.7);
+  border-top-right-radius: 2em;
+  border-bottom-left-radius: 2em;
+  border: 1px solid #000;
+  padding: 0.5em;
 }
-
+.legend-box {
+  border: 1px solid #000;
+}
 .recharge-value-display {
   position: relative;
   top: -2em;
@@ -53,7 +58,6 @@
   /*font-size: 1rem;*/
   color: rgba(0,0,0,0.8);
 }
-
 
 /* Map */
 .geo-bounds {
@@ -120,5 +124,14 @@
   margin-left: 3rem;
   color: #000;
   font-size: .65rem;
+  font-style: italic;
+}
+.graph-notes {
+  z-index: 200;
+  position: absolute;
+  bottom: 1.2em;
+  left: 5em;
+  color: #555;
+  font-size: 0.6rem;
   font-style: italic;
 }
