--- a/app/styles/interactives.css
+++ b/app/styles/interactives.css
@@ -26,43 +26,57 @@
   left:1rem;
   top: 12rem;
   margin-top: 1rem;
-  line-height: 1rem;
+  line-height: 0.1rem;
   font-size: 1rem;
-  background-color: rgba(230, 211, 149, 0.7);
-  border-top-right-radius: 2em;
-  border-bottom-left-radius: 2em;
+  background-color: rgba(100, 100, 100, 0.2);
+  /*border-top-right-radius: 4em;*/
+  /*border-bottom-left-radius: 4em;*/
+  /*border-radius: 2em;*/
   border: 1px solid #000;
-  padding: 0.5em;
+  padding: 1rem;
+}
+.legend-item {
+  width: 24rem;
+  height: 2rem;
 }
 .legend-box {
   border: 1px solid #000;
 }
-.recharge-value-display {
+.legend-recharge {
+  width: 26rem;
+  height: 1rem;
+}
+.legend-wells {
+  width: 26rem;
+  height: 5.5rem;
+}
+.legend-springs {
+  width: 26rem;
+  height: 18rem;
+}
+/*.recharge-value-display {
   position: relative;
   top: -2em;
   padding-left: 2rem;
-  /*font-size: 1rem;*/
   color: rgba(0,0,0,0.8);
 }
 .wells-value-display {
   position: relative;
   top: -2em;
   padding-left: 2rem;
-  /*font-size: 1rem;*/
   color: rgba(0,0,0,0.8);
 }
 .springs-value-display {
   position: relative;
   top: -2em;
   padding-left: 2rem;
-  /*font-size: 1rem;*/
   color: rgba(0,0,0,0.8);
-}
+}*/
 
 /* Map */
 .geo-bounds {
   margin-left: 8rem;
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 .subunit {
   stroke: rgba(0,0,0,1);
@@ -129,7 +143,7 @@
 .graph-notes {
   z-index: 200;
   position: absolute;
-  bottom: 1.2em;
+  bottom: 5em;
   left: 5em;
   color: #555;
   font-size: 0.6rem;
