Basic skrollr usage is integarted via skroolr.dir.js. Skrollr-menu not working s data-menu-top is still undefine. Need to pass correct value into directiveDefinitionObject for menu.

--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,12 +1,70 @@
 <div class="container">
 	<div class="explore">
-    <div class="outline"><h1>Explore the Edwards Aquifer<br/><small>Select a location within the San Antonio Segment of the Balcones Fault Zone</small></h1></div>
+    <!-- <div class="outline"><h1>Explore the Edwards Aquifer<br/><small>Select a location within the San Antonio Segment of the Balcones Fault Zone</small></h1></div> -->
     <div class="centered">
-      <video class="bgvideo bgvexplore" preload="auto" autoplay loop muted> <!-- poster="../images/explore/HCPSanMarcosRiver-loop3.jpg"  -->
+    <!-- <div class="skrollr-body"> -->
+      <!-- <video class="bgvideo bgvexplore" preload="auto" autoplay loop muted poster="../images/explore/HCPSanMarcosRiver-loop3.jpg">
         <source src="../videos/720p/HCPSanMarcosRiver-loop3.webm" type="video/webm">
         <source src="../videos/720p/HCPSanMarcosRiver-loop3.mp4" type="video/mp4">
-      </video>
+      </video> -->
       <!-- <div class="map-backing"><eaa-aquifers-map></eaa-aquifers-map></div> -->
+
+
+      <!-- <div class="div-fixed z500"><h1><span id="scroll-status" class="scroll-index">Scroll Index: TEST</span></h1></div> -->
+
+      <div class="quicknav-hor z-400">
+        <div>
+          <a href="#section00" data-menu-top="0"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-0="fill:rgba(255,255,255,1);" data-1000="fill:rgba(255,255,255,1);" data-2000="fill:rgba(0,0,0,1);"></circle></svg></a>
+          <a href="#section01" data-menu-top="4000"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-2000="fill:rgba(0,0,0,1);" data-3000="fill:rgba(255,255,255,1);" data-4000="fill:rgba(255,255,255,1);" data-5000="fill:rgba(0,0,0,1);"></circle></svg></a>
+          <a href="#section02" data-menu-top="7000"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-5000="fill:rgba(0,0,0,1);" data-6000="fill:rgba(255,255,255,1);" data-7000="fill:rgba(255,255,255,1);" data-8000="fill:rgba(0,0,0,1);"></circle></svg></a>
+          <a href="#section03" data-menu-top="10000"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-8000="fill:rgba(0,0,0,1);" data-9000="fill:rgba(255,255,255,1);" data-10000="fill:rgba(255,255,255,1);" data-11000="fill:rgba(0,0,0,1);"></circle></svg></a>
+          <a href="#section04" data-menu-top="13000"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-11000="fill:rgba(0,0,0,1);" data-12000="fill:rgba(255,255,255,1);" data-13000="fill:rgba(255,255,255,1);" data-14000="fill:rgba(0,0,0,1);"></circle></svg></a>
+          <a href="#section05" data-menu-top="16000"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-14000="fill:rgba(0,0,0,1);" data-15000="fill:rgba(255,255,255,1);" data-16000="fill:rgba(255,255,255,1);" data-17000="fill:rgba(0,0,0,1);"></circle></svg></a>
+          <a href="#section06" data-menu-top="19000"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-17000="fill:rgba(0,0,0,1);" data-18000="fill:rgba(255,255,255,1);" data-19000="fill:rgba(255,255,255,1);" data-20000="fill:rgba(0,0,0,1);"></circle></svg></a>
+          <a href="#section07" data-menu-top="22000"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-20000="fill:rgba(0,0,0,1);" data-21000="fill:rgba(255,255,255,1);" data-22000="fill:rgba(255,255,255,1);" data-23000="fill:rgba(0,0,0,1);"></circle></svg></a>    
+        </div>
+      </div>
+
+      <div skrollr id="water-1" class="div-fixed z-100 background" data-0="opacity:0;" data-500="opacity:0.4; top:0%;" data-20500="opacity:0.4; top:-100%;" data-21000="opacity:0;"></div>
+      <!-- <div id="water-2" class="div-fixed z-100 background" data-0="opacity:0;" data-500="opacity:0.2; top:0%;" data-20500="opacity:0.2; top:-100%;" data-21000="opacity:0;"></div> -->
+
+      <div skrollr id="section00" class="div-fixed z-150" data-1000="opacity:1; left:1.625rem; top:10%;" data-2000="opacity:0; left:70rem; top:10%;">
+        <div class="text-frame">
+          <h1>Text Frame Content</h1>
+          <h2>So much text!</h2>
+          <p>Why is there so much text? I dunno!</p>
+        </div>
+      </div>
+
+      <div skrollr id="section01" class="div-fixed z-150" data-2000="opacity:0; left:70rem; top:10%;" data-3000="opacity:1; left:1.625rem; top:10%;" data-4000="opacity:1; left:1.625rem; top:10%;" data-5000="opacity:0; left:-70rem; top:10%;">
+        <div id="skull" class="image-frame"></div>
+      </div>
+      
+      <div skrollr id="section02" class="div-fixed z-150" data-5000="opacity:0; left:-70rem; top:10%;" data-6000="opacity:1; left:1.625rem; top:10%;" data-7000="opacity:1; left:1.625rem; top:10%;" data-8000="opacity:0; left:70rem; top:10%;">
+        <video class="video-frame" preload="auto" autoplay loop muted>
+          <source src="../videos/720p/HCPSanMarcosRiver-loop3.webm" type="video/webm">
+          <source src="../videos/720p/HCPSanMarcosRiver-loop3.mp4" type="video/mp4">
+        </video>
+      </div>
+
+      <div skrollr id="section03" class="div-fixed z-150" data-8000="opacity:0; left:70rem; top:10%;" data-9000="opacity:1; left:1.625rem; top:10%;" data-10000="opacity:1; left:1.625rem; top:10%;" data-11000="opacity:0; left:-70rem; top:10%;">
+        <div id="explosion" class="image-frame"></div>
+      </div>
+
+      <div skrollr id="section04"class="div-fixed z-150" data-11000="opacity:0; left:-70rem; top:10%;" data-12000="opacity:1; left:1.625rem; top:10%;" data-13000="opacity:1; left:1.625rem; top:10%;" data-14000="opacity:0; left:70rem; top:10%;">
+        <div class="text-frame">
+          <h1>Text Frame Content Strikes Back!</h1>
+          <h2>Again with the text...</h2>
+          <p>Still.So.Mcu.TEXT! -_-</p>
+        </div>
+      </div>
+
+      <div skrollr id="section05" class="div-fixed z-150" data-14000="opacity:0; left:70rem; top:10%; transform:rotate(-90deg) scale(0.1);" data-15000="opacity:1; left:1.625rem; top:10%; transform:rotate(0deg) scale(1);" data-16000="opacity:1; left:1.625rem; top:10%; transform:rotate(0deg) scale(1);" data-17000="opacity:0; left:-70rem; top:10%; transform:rotate(90deg) scale(0.1);">
+        <div id="tripper" class="image-frame"></div>
+      </div>
+
+      <div skrollr id="section06"></div>
+      <div skrollr id="section07"></div>
     </div>
 	</div>
 </div>
