Skrollr working partially. Initial page load layers all content on each other. Refresh sets it correctly then allows proper scrolling wioth mouse wheel. nav links work at first  (one way) but suddenly throws errors and screws up page again upon subsqeuent clicks on same link or attempts to scroll up instead of down. Will figure the bug out next and then be ready to populate content.

--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -1,101 +1,56 @@
 <div class="caveskarsts">
-	<!-- Slide 0 -->
-	<div data-parallax-background class="slide" id="ck-slide0" data-slide="0" data-parallax-ratio="0.5">
-		<!-- <span class="slideno"><h1>Seco Sinkhole</h1></span> -->
-    <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">The Edwards Aquifer — one of the most prolific karst aquifers in the United States — is located right here in south central Texas.  Explore and discover the features that make this aquifer one of the most porous and permeable aquifers around.</p>
-		</div>     
-	</div>
+	<!-- <div class="div-fixed z500"><h1><span id="scroll-status" class="scroll-index">Scroll Index: TEST</span></h1></div> -->
+    <div class="quicknav-hor z-400">
+      <div>
+        <a href="#section00" data-menu-top="0000" data-ng-click="skrollrNavClick($event)"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-0="fill:rgba(255,255,255,1);" data-1000="fill:rgba(255,255,255,1);" data-2000="fill:rgba(0,0,0,1);"></circle></svg></a>
+        <a href="#section01" data-menu-top="4000" data-ng-click="skrollrNavClick($event)"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-2000="fill:rgba(0,0,0,1);" data-3000="fill:rgba(255,255,255,1);" data-4000="fill:rgba(255,255,255,1);" data-5000="fill:rgba(0,0,0,1);"></circle></svg></a>
+        <a href="#section02" data-menu-top="7000" data-ng-click="skrollrNavClick($event)"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-5000="fill:rgba(0,0,0,1);" data-6000="fill:rgba(255,255,255,1);" data-7000="fill:rgba(255,255,255,1);" data-8000="fill:rgba(0,0,0,1);"></circle></svg></a>
+        <a href="#section03" data-menu-top="10000" data-ng-click="skrollrNavClick($event)"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-8000="fill:rgba(0,0,0,1);" data-9000="fill:rgba(255,255,255,1);" data-10000="fill:rgba(255,255,255,1);" data-11000="fill:rgba(0,0,0,1);"></circle></svg></a>
+        <a href="#section04" data-menu-top="13000" data-ng-click="skrollrNavClick($event)"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-11000="fill:rgba(0,0,0,1);" data-12000="fill:rgba(255,255,255,1);" data-13000="fill:rgba(255,255,255,1);" data-14000="fill:rgba(0,0,0,1);"></circle></svg></a>
+        <a href="#section05" data-menu-top="16000" data-ng-click="skrollrNavClick($event)"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-14000="fill:rgba(0,0,0,1);" data-15000="fill:rgba(255,255,255,1);" data-16000="fill:rgba(255,255,255,1);" data-17000="fill:rgba(0,0,0,1);"></circle></svg></a>
+        <a href="#section06" data-menu-top="19000" data-ng-click="skrollrNavClick($event)"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-17000="fill:rgba(0,0,0,1);" data-18000="fill:rgba(255,255,255,1);" data-19000="fill:rgba(255,255,255,1);" data-20000="fill:rgba(0,0,0,1);"></circle></svg></a>
+        <a href="#section07" data-menu-top="22000" data-ng-click="skrollrNavClick($event)"><svg class="nav-circle-container"><circle skrollr class="nav-circle" cx="1.375em" cy="1.375em" r="1.25em" data-20000="fill:rgba(0,0,0,1);" data-21000="fill:rgba(255,255,255,1);" data-22000="fill:rgba(255,255,255,1);" data-23000="fill:rgba(0,0,0,1);"></circle></svg></a>    
+      </div>
+    </div>
 
-	<!-- Slide 1 -->
-	<div data-parallax-background class="slide" id="ck-slide1" data-slide="1" data-parallax-ratio="0.5">
-	  <!-- <span class="slideno"><h1>Waterflow</h1></span> -->
-    <a class="button-scroll" data-slide="2" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">For millions of years, water has transformed the landscape of the Balcones Fault Zone in South Central Texas, creating the Edwards Aquifer and the hundreds of caves and karst features within the limestone.</p>   
-      <video class="plxbgvideo bgv-ck-slide1" poster="../images/caves_karsts/SecoSinkhole.jpg" preload="auto" autoplay loop muted volume="0">
-        <source src="../videos/720p/SecoSinkhole.webm" type="video/webm">
-        <source src="../videos/720p/SecoSinkhole.mp4" type="video/mp4">
+    <div skrollr id="water-1" class="div-fixed z-100 background" data-0="opacity:0;" data-500="opacity:0.4; top:0%;" data-20500="opacity:0.4; top:-100%;" data-21000="opacity:0;"></div>
+    <!-- <div id="water-2" class="div-fixed z-100 background" data-0="opacity:0;" data-500="opacity:0.2; top:0%;" data-20500="opacity:0.2; top:-100%;" data-21000="opacity:0;"></div> -->
+
+    <div skrollr id="section00" class="div-fixed z-150" data-1000="opacity:1; left:1.625rem; top:10%;" data-2000="opacity:0; left:70rem; top:10%;">
+      <div class="text-frame">
+        <h1>Text Frame Content</h1>
+        <h2>So much text!</h2>
+        <p>Why is there so much text? I dunno!</p>
+      </div>
+    </div>
+
+    <div skrollr id="section01" class="div-fixed z-150" data-2000="opacity:0; left:70rem; top:10%;" data-3000="opacity:1; left:1.625rem; top:10%;" data-4000="opacity:1; left:1.625rem; top:10%;" data-5000="opacity:0; left:-70rem; top:10%;">
+      <div id="skull" class="image-frame"></div>
+    </div>
+    
+    <div skrollr id="section02" class="div-fixed z-150" data-5000="opacity:0; left:-70rem; top:10%;" data-6000="opacity:1; left:1.625rem; top:10%;" data-7000="opacity:1; left:1.625rem; top:10%;" data-8000="opacity:0; left:70rem; top:10%;">
+      <video class="video-frame" preload="auto" autoplay loop muted>
+        <source src="../videos/720p/HCPSanMarcosRiver-loop3.webm" type="video/webm">
+        <source src="../videos/720p/HCPSanMarcosRiver-loop3.mp4" type="video/mp4">
       </video>
-    </div>    
-  </div>
+    </div>
 
-	<!-- Slide 2 -->
-	<div data-parallax-background class="slide" id="ck-slide2" data-slide="2" data-parallax-ratio="0.5">
-		<!-- <span class="slideno"><h1>Location</h1></span> -->
-    <a class="button-scroll" data-slide="3" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">Beginning along the Southern edge of the Edwards Plateau, the 5,400 square mile Drainage Area funnels water into streams and creeks that flow south toward the Recharge Zone—the outcrop of the Edwards Limestone.<br><span class="address-lookup"><span class="glyphicon glyphicon-search glyph-spacing-right address-lookup-color"></span>Learn which aquifer sustains your area today.<a class="nav-link-address-lookup" href="{{urlAddressLookup}}" title="Aquifer Address Lookup" target="_blank" ng-click="linkModelFunc(urlAddressLookup)">Look up your address online here!</a></span></p>
-		</div>     
-	</div>
+    <div skrollr id="section03" class="div-fixed z-150" data-8000="opacity:0; left:70rem; top:10%;" data-9000="opacity:1; left:1.625rem; top:10%;" data-10000="opacity:1; left:1.625rem; top:10%;" data-11000="opacity:0; left:-70rem; top:10%;">
+      <div id="explosion" class="image-frame"></div>
+    </div>
 
-	<!-- Slide 3 -->
-	<div data-parallax-background class="slide" id="ck-slide3" data-slide="3" data-parallax-ratio="0.5">
-		<!-- <span class="slideno"><h1>Drainage</h1></span> -->
-    <a class="button-scroll" data-slide="4" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">In the Drainage Area, water emerges from numerous small springs along the Edwards Plateau to create the baseflow for rivers that add recharge to the aquifer.  Strong thunderstorms fill the normally dry riverbeds of the Texas Hill Country.</p>
-      <video class="plxbgvideo bgv-ck-slide3" poster="../images/caves_karsts/DrainageArea.jpg" preload="auto" autoplay loop muted volume="0">
-        <source src="../videos/720p/DrainageArea.webm" type="video/webm">
-        <source src="../videos/720p/DrainageArea.mp4" type="video/mp4">
-      </video>
-		</div>
-	</div>
+    <div skrollr id="section04"class="div-fixed z-150" data-11000="opacity:0; left:-70rem; top:10%;" data-12000="opacity:1; left:1.625rem; top:10%;" data-13000="opacity:1; left:1.625rem; top:10%;" data-14000="opacity:0; left:70rem; top:10%;">
+      <div class="text-frame">
+        <h1>Text Frame Content Strikes Back!</h1>
+        <h2>Again with the text...</h2>
+        <p>Still.So.Mcu.TEXT! -_-</p>
+      </div>
+    </div>
 
-	<!-- Slide 4 -->
-	<div data-parallax-background class="slide" id="ck-slide4" data-slide="4" data-parallax-ratio="0.5">
-		<!-- <span class="slideno"><h1>Limestone</h1></span>                   -->
-    <a class="button-scroll" data-slide="5" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">As the rainwater mixes with organic compounds in the soil, it forms a diluted weak acid called carbonic acid.  Over millions of years this acid has dissolved out some of the calcite minerals that make up the Edwards Aquifer, leaving interconnected pores and cavities, and in some cases large cave systems.</p>
-		</div>     
-	</div>
+    <div skrollr id="section05" class="div-fixed z-150" data-14000="opacity:0; left:70rem; top:10%; transform:rotate(-90deg) scale(0.1);" data-15000="opacity:1; left:1.625rem; top:10%; transform:rotate(0deg) scale(1);" data-16000="opacity:1; left:1.625rem; top:10%; transform:rotate(0deg) scale(1);" data-17000="opacity:0; left:-70rem; top:10%; transform:rotate(90deg) scale(0.1);">
+      <div id="tripper" class="image-frame"></div>
+    </div>
 
-	<!-- Slide 5 -->
-	<div data-parallax-background class="slide" id="ck-slide5" data-slide="5" data-parallax-ratio="0.5">
-	<!-- <span class="slideno"><h1>Sinkhole</h1></span> -->
-    <a class="button-scroll" data-slide="6" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">The pores created in the rock can range in size from microscopic to several feet in diameter—such as this 40ft wide sinkhole in Medina County, Texas.</p>
-      <video class="plxbgvideo bgv-ck-slide5" poster="../images/caves_karsts/CaveEntrance.jpg" preload="auto" autoplay loop muted volume="0">
-        <source src="../videos/720p/CaveEntrance.webm" type="video/webm">
-        <source src="../videos/720p/CaveEntrance.mp4" type="video/mp4">
-      </video>
-    </div>   
-	</div>
-
-  <!-- Slide 6 -->
-  <div data-parallax-background class="slide" id="ck-slide6" data-slide="6" data-parallax-ratio="0.5">
-    <span class="slideno"><h1 class="text-black">Recharge Data Interactive</h1></span>            
-    <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper interactive">
-      <eaa-gauge-data-interactive-recharge></eaa-gauge-data-interactive-recharge>
-    </div>  
-  </div>
-
-	<!-- Slide 7 -->
-	<div data-parallax-background class="slide" id="ck-slide7" data-slide="7" data-parallax-ratio="0.5">
-		<!-- <span class="slideno"><h1>Descent</h1></span>             -->
-    <a class="button-scroll" data-slide="8" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper" id="descent">
-      <p alt="">A caver descends more than 150 feet to the bottom of the sinkhole, following a similar path that rainfall and runoff would take.</p>
-		</div>  
-	</div>
-
-	<!-- Slide 8 -->
-	<div data-parallax-background class="slide" id="ck-slide8" data-slide="8" data-parallax-ratio="0.5">
-		<!-- <span class="slideno"><h1>Watertable</h1></span>                 -->
-    <a class="button-scroll reverse" id="" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
-      <p alt="">As the water percolates through the rocks it eventually reaches the water table, or point which the limestone is completely saturated.  From here the water moves deeper underground, flowing generally north and east towards discharge points at thousands of water wells, and some of the largest spring systems in Texas.</p>
-		</div> 
-	</div>
-
-	<!-- Slide 9 -->
-	<div data-parallax-background class="slide" id="ck-slide9" data-slide="9" data-parallax-ratio="0.5">
-		<span class="slideno"><h1>End</h1></span>                  
-    <div class="wrapper">
-		</div> 
-	</div>
+    <div skrollr id="section06"></div>
+    <div skrollr id="section07"></div>
 </div>
